Closed
Bug 1795241
Opened 3 years ago
Closed 3 years ago
Unreachable-code warnings in NSS
Categories
(NSS :: Libraries, defect)
NSS
Libraries
Tracking
(Not tracked)
RESOLVED
FIXED
3.85
People
(Reporter: glandium, Unassigned)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
Details |
/tmp/gecko/security/nss/lib/certhigh/certvfy.c:75:20: error: 'return' will never be executed [-Werror,-Wunreachable-code-return]
return SECSuccess;
^~~~~~~~~~
1 error generated.
/tmp/gecko/security/nss/lib/pk11wrap/pk11util.c:473:5: error: code will never be executed [-Werror,-Wunreachable-code]
SECMOD_GetWriteLock(moduleLock);
^~~~~~~~~~~~~~~~~~~
1 error generated.
/tmp/gecko/security/nss/lib/ckfw/wrap.c:225:9: error: code will never be executed [-Werror,-Wunreachable-code]
PRInt32 remainingInstances;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
1 error generated.
| Reporter | ||
Comment 1•3 years ago
|
||
| Reporter | ||
Comment 2•3 years ago
|
||
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 3.85
You need to log in
before you can comment on or make changes to this bug.
Description
•