Bug 1795241 - Fix unreachable-code warnings. r=nss-reviewers,jschanck

Differential Revision: https://phabricator.services.mozilla.com/D159371